Form Groups and Controls, Binding a Form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="card mt-3">
-    <form class="card-body">
+    <form class="card-body" [formGroup]="ccForm">
       <div class="row">
         <div class="col-md-6 mb-3">
           <label>Name on Card</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="name">
         </div>
         <div class="col-md-6 mb-3">
           <label>Credit Card Number</label>
@@ -24,5 +24,7 @@
       <hr class="mb-4">
       <button class="btn btn-primary btn-lg btn-block" type="submti">Continue to Checkout</button>
     </form>
+    <div>Values: {{ ccForm.value |  json }}</div>
+    <div>Valid: {{ ccForm.valid }}</div>
   </div>
 </div>
