--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
       <div class="row">
         <div class="col-md-6 mb-3">
           <label>Name on Card</label>
-          <input type="text" class="form-control" formControlName="name" [ngClass]="{ 'is-invalid': ccForm.get('name')?.errors }">
-          <ng-container *ngIf="ccForm.get('name')?.errors">
+          <input type="text" class="form-control" formControlName="name"
+           [ngClass]="{ 'is-invalid': ccForm.get('name')?.dirty && ccForm.get('name')?.touched && ccForm.get('name')?.errors}">
+          <ng-container *ngIf="ccForm.get('name')?.dirty && ccForm.get('name')?.touched && ccForm.get('name')?.errors">
             <div *ngIf="ccForm.get('name')?.errors?.['required']" class="invalid-feedback">
               Please fill in the field
             </div>
