--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card mt-3">
-    <form class="card-body" [formGroup]="ccForm">
+    <form class="card-body" [formGroup]="ccForm" (ngSubmit)="submit()">
       <div class="row">
         <div class="col-md-6 mb-3">
           <label>Name on Card</label>
@@ -8,21 +8,21 @@
         </div>
         <div class="col-md-6 mb-3">
           <label>Credit Card Number</label>
-          <input type="text" class="form-control">
+          <app-input [control]="ccForm.controls['num']"></app-input>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 mb-3">
           <label>Expiration</label>
-          <input type="text" class="form-control">
+          <app-input [control]="ccForm.controls['expiration']"></app-input>
         </div>
         <div class="col-md-6 mb-3">
           <label>CVV</label>
-          <input type="text" class="form-control">
+          <app-input [control]="ccForm.controls['cvv']"></app-input>
         </div>
       </div>
       <hr class="mb-4">
-      <button class="btn btn-primary btn-lg btn-block" type="submti">Continue to Checkout</button>
+      <button class="btn btn-primary btn-lg btn-block" type="submti" [disabled]="ccForm.invalid">Continue to Checkout</button>
     </form>
     <div>Values: {{ ccForm.value |  json }}</div>
     <div>Valid: {{ ccForm.valid }}</div>
